# ChoicesParadox

./: .gitignore  README.md  config.py  main.py  pyproject.toml
item_scrapper/: README.md  cards.json  encounters.json  items.py  main.py  potions.json  pyproject.toml  relics.json
run_preprocessor/: README.md  card.py  choices_registry.py  deck.py  mappoint.py  player.py  reader.py  relic_tracker.py  run_reader.py  save_reader.py  snapshot.py  types.py
run_preprocessor/tests/: test_completeness.py  test_correlated.py  test_listener.py  test_reader.py  test_snapshot.py
run_scrapper/: .gitignore  README.md  main.py  pyproject.toml  scraper.py
scripts/: count_runs.sh  run_test.sh  tar_data.sh
stat_analysis/: README.md  bdt.py  eval.py  preprocess.py  shap_cli.py  state_vectorizer.py  testcase_generator.py  train.py  train_hurdle.py
stat_analysis/tests/: test_data_performance.py  test_eval.py  test_health_evaluation.py  test_loader.py  test_performance.py  test_preprocess.py  test_state_vectorizer.py
temp_UI/: cli.py
testfiles/: current_run.save  current_run_test_health.save  early_run.save  ironclad_a5_lose.run  necrobinder_a7_remove_relics.run  regent_a0_win.run  regent_a5_abandon.run  silent_a0_win.run  silent_a10_one_room.run  xgb_model.joblib
