[project]
name = "choices-paradox"
version = "0.1.0"
description = "ChoicesParadox project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.33.1",
    "numpy>=2.1.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.5.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "xgboost>=2.1.0",
    "pandas>=2.2.0",
    "shap>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv.workspace]
members = ["run_scrapper", "item_scrapper"]
